# cli

./: .gitignore  Cargo.toml  README.md
src/: api.rs  cli.rs  config.rs  main.rs  token_response.rs
src/app/: env_var.rs  mod.rs  restart_policy.rs  secret.rs  service.rs
src/commands/: common.rs  create.rs  delete.rs  describe.rs  env.rs  error.rs  expose.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  secrets.rs  signup.rs  tier.rs  up.rs
