[package]
name = "deployc-cli"
version = "0.1.0"
authors = ["Jeremy Jacobson <jjacobson93@gmail.com>"]

[dependencies]
base64 = "0.9.2"
chrono = { version = "0.4.2", features = ["serde"] }
chrono-humanize = "0.0.11"
clap = "2.31.2"
colored = "1.6.0"
hyper = "0.11.27"
lazy_static = "1.0.0"
prettytable-rs = "0.7.0"
mime = "0.3.7"
rand = "0.5.0"
regex = "1.0.0"
reqwest = "0.8.5"
serde = "1.0.62"
serde_derive = "1.0.62"
serde_json = "1.0.18"
serde_yaml = "0.7.4"
slug = "0.1.3"
tar = "0.4.15"
termion = "1.5.1"
url = "1.7.0"
url_serde = "0.2.0"

[[bin]]
name = "deployc"
path = "src/main.rs"
